enjeux de la controverse mais sans les images

--- a/cannabis.html
+++ b/cannabis.html
@@ -55,16 +55,26 @@
         <div style="opacity: 90%; margin-left: 1rem; margin-right: 1rem" class="card bg-dark text-light">
             <div class="card-body">
                 <div style="padding-left: 1%">
-                    <h1 class="display-5 _text">Introduction</h1>
-                    <p style="font-size: large; text-align: justify">
-                        Bienvenue sur notre site, l'endroit où la controverse rencontre la connaissance, et où les nuances du débat sur le cannabis sont explorées avec passion et objectivité. Dans un monde en constante évolution, la question de la légalisation et de l'utilisation du cannabis suscite des débats animés, mêlant des perspectives médicales, sociales, économiques et culturelles. Que vous soyez un défenseur convaincu, un sceptique intrigué ou simplement curieux des multiples facettes de cette plante controversée, nous vous invitons à plonger dans les profondeurs de la controverse entourant le cannabis. Préparez-vous à découvrir des faits fascinants, à remettre en question vos préjugés et à explorer les différentes dimensions d'un sujet qui continue de diviser et d'intriguer la société moderne. Bienvenue dans le monde complexe du cannabis !
-                        <br><br>
-                        Selon Santé Publique France, le cannabis est et reste de très loin le produit illicite le plus expérimenté en France, près de la moitié des adultes (46%) en ont déjà consommé.
-                        <br><br>
-                        Légaliser le cannabis est une question complexe et controversée qui suscite un débat passionné en France mais aussi à travers le monde. Cette controverse repose sur des arguments diversifiés qui pèsent les avantages potentiels de la réglementation et de la légalisation de cette plante par rapport à ses risques et ses conséquences sur la société et la santé publique. Alors que certains considèrent la légalisation comme une solution aux problèmes liés au marché noir, une source de revenus fiscaux et une opportunité de réglementer la qualité des produits, d'autres craignent une augmentation de la consommation, des risques pour la santé mentale, et des impacts sur la sécurité routière. Ces discussions autour de la légalisation du cannabis reflètent des questions profondément ancrées dans la société, allant de la liberté individuelle à la protection de la santé publique, et elles exigent une réflexion nuancée pour trouver un équilibre entre ces enjeux.
+                    <h1 class="display-5 _text">Le cannabis, quésaco ? </h1>
+                    <br>
+                    <p style='font-size: large; text-align: justify'>
+                        Le terme « Cannabis » désigne le nom latin du Chanvre. C’est une plante originaire des régions équatoriales, présente dans la plupart des régions du monde. Il existe trois espèces de cannabis qui sont utilisées de différentes manières. Le Cannabis sativa ou chanvre textile est majoritairement à destination de l’usage agricole et industriel notamment dans l’industrie du textile, du papier et des cordages en raison de sa résistance, et dans l’industrie de l’alimentation. Il est généralement riche en tétrahydrocannabinol (THC), et a tendance à produire des effets énergisants et psychédéliques. Les souches de cannabis sativa sont parfois utilisées à des fins récréatives (Theunis, Backer, Charlier 2010).
+                    </p>
+                    <p style='font-size: large; text-align: justify'>
+                        Le Cannabis indica est originaire principalement d'Asie centrale. Les variétés indica ont tendance à avoir des niveaux plus élevés de cannabinoïdes tels que le CBD (cannabidiol), qui ne provoque pas d'effet psychédélique, mais peut avoir des propriétés relaxantes et sédatives. Les souches de cannabis indica sont souvent utilisées pour traiter des problèmes de santé tels que l'insomnie et la douleur.
+                    </p>
+                    <p style='font-size: large; text-align: justify'>
+                        La dernière espèce de cannabis est le Cannabis ruderalis. Originaire d'Europe de l'Est et de Russie, le cannabis ruderalis est généralement plus petit que le cannabis sativa et le cannabis indica, avec une structure de plantes rudimentaire. Il a naturellement de faibles niveaux de THC, mais il est souvent utilisé pour croiser avec d'autres variétés afin de créer des souches auto-floraison, qui poussent et fleurissent plus rapidement (Theunis, Backer, Charlier 2010).
+                    </p>
+                    <p style='font-size: large; text-align: justify'>
+                        En plus de ces trois espèces principales, de nombreuses sous-espèces et hybrides de cannabis ont été développées par les cultivateurs pour créer des souches aux caractéristiques spécifiques en termes de saveur, d'effets, de taux de cannabinoïdes, etc. Ces variétés peuvent évoluer considérablement en fonction des croisements et de la génétique utilisée. Chaque variété de cannabis peut avoir ses propres caractéristiques uniques en termes d'apparence, de goût, d'odeur et d'effets (Cannabis: fiche drogue | www.emcdda.europa.eu [sans date]).
                     </p>
                 </div>
-            </div>
+                <br>
+                <div style="text-align: center">
+                    <a href="controverse.html" role="button" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 link-light px-5">Retourner aux enjeux</a>
+                </div>
+                </div>
         </div>
     </div>
 </div>
