--- a/controverse.html
+++ b/controverse.html
@@ -61,13 +61,15 @@
         <div class="col-md-4">
             <div class="card bg-dark text-white">
                 <figure>
-                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
-                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                  <img src="Images/cannabis-leaf-plant.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits">
+                      <a href="https://www.freepik.com/free-photo/cannabis-leaf-plant_9229252.htm#query=cannabis&position=21&from_view=search&track=sph&uuid=359f1469-9f28-4265-abfa-ea697ad8cf8c">Image by Racool_studio</a> on Freepik
+                  </figcaption>
                 </figure>
 
                 <div class="card-body">
-                    <h5 class="card-title display-5">Politique</h5>
-                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                    <h5 class="card-title display-5">Le cannabis, quésaco ? </h5>
+                    <a href="cannabis.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
@@ -79,8 +81,8 @@
                 </figure>
 
                 <div class="card-body">
-                    <h5 class="card-title display-5">Politique</h5>
-                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                    <h5 class="card-title display-5">Et la légalisation ? </h5>
+                    <a href="légalisation.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
@@ -92,8 +94,8 @@
                 </figure>
 
                 <div class="card-body">
-                    <h5 class="card-title display-5">Politique</h5>
-                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                    <h5 class="card-title display-5">Médical</h5>
+                    <a href="medical.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
@@ -108,8 +110,8 @@
                 </figure>
 
                 <div class="card-body">
-                    <h5 class="card-title display-5">Politique</h5>
-                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                    <h5 class="card-title display-5">Enjeu sociétal</h5>
+                    <a href="societal.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
@@ -117,14 +119,16 @@
             <div class="card bg-dark text-white">
                 <div>
                 <figure>
-                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
-                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                    <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
+                    <figcaption class="credits">
+                        <a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=a3bec0b4-fe0b-4f80-b1c7-ec4a34547888">Image by pch.vector</a> on Freepik
+                    </figcaption>
                 </figure>
                 </div>
 
                 <div class="card-body">
                     <h5 class="card-title display-5">Politique</h5>
-                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                    <a href="politique.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
@@ -136,8 +140,8 @@
                 </figure>
 
                 <div class="card-body">
-                    <h5 class="card-title display-5">Politique</h5>
-                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                    <h5 class="card-title display-5">Économie</h5>
+                    <a href="economie.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
