--- a/economie.html
+++ b/economie.html
@@ -55,14 +55,13 @@
         <div style="opacity: 90%; margin-left: 1rem; margin-right: 1rem" class="card bg-dark text-light">
             <div class="card-body">
                 <div style="padding-left: 1%">
-                    <h1 class="display-5 _text">Introduction</h1>
-                    <p style="font-size: large; text-align: justify">
-                        Bienvenue sur notre site, l'endroit où la controverse rencontre la connaissance, et où les nuances du débat sur le cannabis sont explorées avec passion et objectivité. Dans un monde en constante évolution, la question de la légalisation et de l'utilisation du cannabis suscite des débats animés, mêlant des perspectives médicales, sociales, économiques et culturelles. Que vous soyez un défenseur convaincu, un sceptique intrigué ou simplement curieux des multiples facettes de cette plante controversée, nous vous invitons à plonger dans les profondeurs de la controverse entourant le cannabis. Préparez-vous à découvrir des faits fascinants, à remettre en question vos préjugés et à explorer les différentes dimensions d'un sujet qui continue de diviser et d'intriguer la société moderne. Bienvenue dans le monde complexe du cannabis !
-                        <br><br>
-                        Selon Santé Publique France, le cannabis est et reste de très loin le produit illicite le plus expérimenté en France, près de la moitié des adultes (46%) en ont déjà consommé.
-                        <br><br>
-                        Légaliser le cannabis est une question complexe et controversée qui suscite un débat passionné en France mais aussi à travers le monde. Cette controverse repose sur des arguments diversifiés qui pèsent les avantages potentiels de la réglementation et de la légalisation de cette plante par rapport à ses risques et ses conséquences sur la société et la santé publique. Alors que certains considèrent la légalisation comme une solution aux problèmes liés au marché noir, une source de revenus fiscaux et une opportunité de réglementer la qualité des produits, d'autres craignent une augmentation de la consommation, des risques pour la santé mentale, et des impacts sur la sécurité routière. Ces discussions autour de la légalisation du cannabis reflètent des questions profondément ancrées dans la société, allant de la liberté individuelle à la protection de la santé publique, et elles exigent une réflexion nuancée pour trouver un équilibre entre ces enjeux.
-                    </p>
+                    <h1 class="display-5 _text">Économie</h1>
+                    <br>
+
+                </div>
+                <br>
+                <div style="text-align: center">
+                    <a href="controverse.html" role="button" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 link-light px-5">Retourner aux enjeux</a>
                 </div>
             </div>
         </div>
