ajoute les images pour les enjeux mais les cards ne font toutes la même taille

--- a/controverse.html
+++ b/controverse.html
@@ -76,8 +76,10 @@
         <div class="col-md-4">
             <div class="card bg-dark text-white">
                 <figure>
-                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
-                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                  <img src="Images/legalisation.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits">
+                      <a href="https://www.freepik.com/free-vector/glossary-concept-illustration_49407821.htm#query=dictionnaire%20d%C3%A9finition&position=30&from_view=search&track=ais&uuid=5d0be869-f905-47b6-8b3b-e470fdc4e6d7">Image by storyset</a> on Freepik
+                  </figcaption>
                 </figure>
 
                 <div class="card-body">
@@ -89,8 +91,10 @@
         <div class="col-md-4">
             <div class="card bg-dark text-white">
                 <figure>
-                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
-                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                  <img src="Images/medical.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits">
+                      <a href="https://www.freepik.com/free-vector/doctors-concept-illustration_7191136.htm#query=hospital&position=4&from_view=author&uuid=4f46042e-004a-4030-a513-fc9638327d2e">Image by storyset</a> on Freepik
+                  </figcaption>
                 </figure>
 
                 <div class="card-body">
@@ -104,9 +108,11 @@
     <div class="row">
         <div class="col-md-4">
             <div class="card bg-dark text-white">
-                <figure>
-                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
-                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                <figure style="padding: 10%">
+                  <img src="Images/societe.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits">
+                      <a href="https://www.freepik.com/free-vector/community-concept-illustration_7769806.htm#page=2&query=society&position=19&from_view=author&uuid=921887c4-c4e4-4c28-9a1d-53711705558b">Image by storyset</a> on Freepik
+                  </figcaption>
                 </figure>
 
                 <div class="card-body">
@@ -135,8 +141,10 @@
         <div class="col-md-4">
             <div class="card bg-dark text-white">
                 <figure>
-                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
-                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                  <img src="Images/economie.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits">
+                      <a href="https://www.freepik.com/free-vector/investing-concept-illustration_9930924.htm#query=economy&position=40&from_view=author&uuid=fa752010-72a7-40db-8eea-aae62a766f00">Image by storyset</a> on Freepik
+                  </figcaption>
                 </figure>
 
                 <div class="card-body">
