--- a/controverse.html
+++ b/controverse.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Title</title>
+    <title>La légalsiation du cannabis</title>
 </head>
 
 <body style="background: url('Images/cannabis-marijuana-leaf-closeup.jpg'); background-size: cover; backdrop-filter: blur(10px);">
@@ -59,7 +59,7 @@
 <div style="margin-top: 1rem; opacity: 90%" class="container text-center">
     <div class="row">
         <div class="col-md-4">
-            <div class="card bg-dark text-white">
+            <div style="height: 30rem" class="card bg-dark text-white">
                 <figure>
                   <img src="Images/cannabis-leaf-plant.jpg" class="card-img-top img-with-credit" alt="...">
                   <figcaption class="credits">
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card bg-dark text-white">
+            <div style="height: 30rem" class="card bg-dark text-white">
                 <figure>
                   <img src="Images/legalisation.jpg" class="card-img-top img-with-credit" alt="...">
                   <figcaption class="credits">
@@ -84,12 +84,13 @@
 
                 <div class="card-body">
                     <h5 class="card-title display-5">Et la légalisation ? </h5>
+                    <br>
                     <a href="légalisation.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card bg-dark text-white">
+            <div style="height: 30rem" class="card bg-dark text-white">
                 <figure>
                   <img src="Images/medical.jpg" class="card-img-top img-with-credit" alt="...">
                   <figcaption class="credits">
@@ -99,6 +100,7 @@
 
                 <div class="card-body">
                     <h5 class="card-title display-5">Médical</h5>
+                    <br>
                     <a href="medical.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
@@ -107,8 +109,8 @@
     <br>
     <div class="row">
         <div class="col-md-4">
-            <div class="card bg-dark text-white">
-                <figure style="padding: 10%">
+            <div style="height: 30rem" class="card bg-dark text-white">
+                <figure>
                   <img src="Images/societe.jpg" class="card-img-top img-with-credit" alt="...">
                   <figcaption class="credits">
                       <a href="https://www.freepik.com/free-vector/community-concept-illustration_7769806.htm#page=2&query=society&position=19&from_view=author&uuid=921887c4-c4e4-4c28-9a1d-53711705558b">Image by storyset</a> on Freepik
@@ -117,12 +119,13 @@
 
                 <div class="card-body">
                     <h5 class="card-title display-5">Enjeu sociétal</h5>
+                    <br>
                     <a href="societal.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card bg-dark text-white">
+            <div style="height: 30rem" class="card bg-dark text-white">
                 <div>
                 <figure>
                     <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
@@ -134,12 +137,13 @@
 
                 <div class="card-body">
                     <h5 class="card-title display-5">Politique</h5>
+                    <br>
                     <a href="politique.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card bg-dark text-white">
+            <div style="height: 30rem" class="card bg-dark text-white">
                 <figure>
                   <img src="Images/economie.jpg" class="card-img-top img-with-credit" alt="...">
                   <figcaption class="credits">
@@ -149,6 +153,7 @@
 
                 <div class="card-body">
                     <h5 class="card-title display-5">Économie</h5>
+                    <br>
                     <a href="economie.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
