--- a/teaser.html
+++ b/teaser.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Title</title>
+    <title>La légalisation du cannabis</title>
 </head>
 <body style="background: url(Images/wepik-export-20240205075337kGnw.png); background-size: cover; backdrop-filter: blur(10px);">
 <!--bandeau du site-->
@@ -55,7 +55,7 @@
         <br>
         <div style="text-align: center">
             <video controls width="80%" class="custom-audio">
-                <source src="src/test.mp4">
+                <source src="src/coinces.mp4">
             </video>
         </div>
     </div>
