modif sur les cards pour qu'elles fassent la mme taille

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div style="margin-top: 1rem; opacity: 90%" class="container text-center">
         <div class="row">
             <div class="col-md-4">
-                <div class="card bg-dark text-white">
+                <div style="height: 31rem" class="card bg-dark text-white">
                     <img src="Images/film-596009_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Teaser</h5>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card bg-dark text-white">
+                <div style="height: 31rem" class="card bg-dark text-white">
                     <img src="Images/debate-1993399_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Controverse</h5>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card bg-dark text-white">
+                <div style="height: 31rem" class="card bg-dark text-white">
                     <img src="Images/sherlock-4445206_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Enquête de terrain</h5>
@@ -122,7 +122,7 @@
     <div style="margin-top:1rem; margin-bottom: 1rem; opacity: 90%" class="container text-center">
         <div class="row">
             <div class="col-md-4">
-                <div class="card bg-dark text-white">
+                <div style="height: 31rem" class="card bg-dark text-white">
                     <img src="Images/on-air-4901461_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Podcast</h5>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card bg-dark text-white">
+                <div style="height: 31rem" class="card bg-dark text-white">
                     <img src="Images/mindmap-4324289_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Cartographie</h5>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card bg-dark text-white">
+                <div style="height: 31rem" class="card bg-dark text-white">
                     <img src="Images/a-book-8345133_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Bibliographie</h5>
