--- a/economie.html
+++ b/economie.html
@@ -57,7 +57,31 @@
                 <div style="padding-left: 1%">
                     <h1 class="display-5 _text">Économie</h1>
                     <br>
-
+                    <p style='font-size: large; text-align: justify'>
+                        La légalisation du cannabis aura des conséquences économiques sur les consommateurs, les dealers et l'État.
+                    </p>
+                    <p style='font-size: large; text-align: justify'>
+                        L'État gagnerait de l'argent par plusieur moyens.
+                        D'une part, les taxes généreraient de 430 millions à 1,2 milliard d’euros de recettes, cela dépend du scénario retenu et de la taxation appliquée (Ben Lakhdar et Kopp, 2018).
+                        D'autre part, cela supprimerait des coûts liés à la justice et au maintien de l’ordre.
+                        En effet, il n’y aurait plus besoin de faire d’interpellations, les forces de l’ordre pourraient s’occuper d’autres missions et la justice aurait beaucoup moins d’affaires à traiter.
+                        Attention, la légalisation sera cependant encadrée, avec par exemple une quantité limite de possession, donc il faudra quand même traiter les affaires où le cadre légal a été dépassé.<br>
+                        Cet argent pourrait être réinvesti dans des actions de prévention et d'éducation qui, selon plusieurs acteurs, ne sont pas à la hauteur du problème.
+                    </p>
+                    <p style='font-size: large; text-align: justify'>
+                        Actuellement les consommateurs paient un surcoût lié à la prise de risque des dealers qui en vendent illégalement.
+                        De plus, ils paient un surcoût non pécunier lié au risque d'arrestation, d'arnaque et de violence.
+                        Avec la légalisation, ces surcoût disparaitraient mais seraient remplacés par une taxe.
+                        Plusieurs scénarios de taxation sont envisagés qui feraient plus ou moins varier le prix du gramme de cannabis.
+                        Par exemple avec un taxe comme celle sur le tabac (80%), le coût total augmenterait de 30% (Ben Lakhdar et Kopp, 2018).
+                        Il y aurait donc un risque que les consommateurs continuent de se tourner vers le traffic illégal, alors moins cher.
+                    </p>
+                    <p style='font-size: large; text-align: justify'>
+                        Si on fait l'hypothèse que la majorité des consommateurs se tournent vers le cannabis légal, cela couperait une grosse partie des revenus des réseaux criminels qui sont alimentés par le traffic illégal de cannabis.
+                        La légalisation permetterait d'affaiblir les réseaux criminels et de limiter leur emprise sur certains quartiers.
+                        Cependant, il n'est pas sûr que cette stratégie soit efficace, les réseaux criminels pourraient diversifier leur offre et ainsi vendre d'autres drogues toujours illégales, peut être plus dures.
+                        Cette thèse est soutenue par la droite et des membres des forces de l'ordre qui appelent à ne pas être naïf.
+                    </p>
                 </div>
                 <br>
                 <div style="text-align: center">
