enlève le texte dans les cards et ajuste la hauteur en conséquence

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         background: url('Images/cannabis-marijuana-leaf-closeup.jpg');
         background-size: cover;
         backdrop-filter: blur(10px);
-        font-family: 'ELEGANT TYPEWRITER';
+        font-family: 'ELEGANT TYPEWRITER', sans-serif;
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -88,31 +88,28 @@
     <div style="margin-top: 1rem; opacity: 90%" class="container text-center">
         <div class="row">
             <div class="col-md-4">
-                <div style="height: 31rem" class="card bg-dark text-white">
+                <div style="height: 25rem" class="card bg-dark text-white">
                     <img src="Images/film-596009_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Teaser</h5>
-                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="teaser.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div style="height: 31rem" class="card bg-dark text-white">
+                <div style="height: 25rem" class="card bg-dark text-white">
                     <img src="Images/debate-1993399_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Controverse</h5>
-                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="controverse.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div style="height: 31rem" class="card bg-dark text-white">
+                <div style="height: 25rem" class="card bg-dark text-white">
                     <img src="Images/sherlock-4445206_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Enquête de terrain</h5>
-                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="enqueteterrain.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
@@ -122,32 +119,29 @@
     <div style="margin-top:1rem; margin-bottom: 1rem; opacity: 90%" class="container text-center">
         <div class="row">
             <div class="col-md-4">
-                <div style="height: 31rem" class="card bg-dark text-white">
+                <div style="height: 25rem" class="card bg-dark text-white">
                     <img src="Images/on-air-4901461_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Podcast</h5>
-                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="teaser.html" class="btn btn-secondary">Découvrir</a>
+                        <a href="podcast.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div style="height: 31rem" class="card bg-dark text-white">
+                <div style="height: 25rem" class="card bg-dark text-white">
                     <img src="Images/mindmap-4324289_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Cartographie</h5>
-                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="controverse.html" class="btn btn-secondary">Découvrir</a>
+                        <a href="cartographie.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div style="height: 31rem" class="card bg-dark text-white">
+                <div style="height: 25rem" class="card bg-dark text-white">
                     <img src="Images/a-book-8345133_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Bibliographie</h5>
-                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="enqueteterrain.html" class="btn btn-secondary">Découvrir</a>
+                        <a href="biblio.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
             </div>
