--- a/teaser.html
+++ b/teaser.html
@@ -58,6 +58,14 @@
                 <source src="src/coinces.mp4">
             </video>
         </div>
+        <br>
+        <p style="font-family: sans-serif; font-size: small; opacity: 0.4">
+            musique utilisée :
+            <br>
+            "deux connards dans un abribus", interprétée par Casseurs Flowters, paroles d'Orelsan et Gringe, musique de Gautier Vivioz,
+            <br>
+            Warner Chapell Music France, 7th Magnitude & Gautier Vivioz (p) 2013 7th Magnitude / Wagram Music
+        </p>
     </div>
 </div>
 
