images en savoir plus

--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
                 <div class="col-md-4">
                     <div class="card bg-dark text-white" style="height: 25rem">
                         <figure>
-                            <img alt="..." class="card-img-top img-with-credit" src="Images/medical.jpg">
+                            <img alt="..." class="card-img-top img-with-credit" src="Images/Film%20rolls-bro.png" style="max-height: 13rem; width: auto">
                             <figcaption class="credits">
-                                <a href="https://www.freepik.com/free-vector/doctors-concept-illustration_7191136.htm#query=hospital&position=4&from_view=author&uuid=4f46042e-004a-4030-a513-fc9638327d2e">Image
-                                    by storyset</a> on Freepik
+                                <a href="https://www.freepik.com/free-vector/film-rolls-concept-illustration_14767593.htm#query=movie&position=1&from_view=author&uuid=e2ac6ea8-294f-48d3-8303-b808628c27df">Image by storyset</a> on Freepik
                             </figcaption>
                         </figure>
                         <div class="card-body">
@@ -132,10 +131,9 @@
                 <div class="col-md-4">
                     <div class="card bg-dark text-white" style="height: 25rem">
                         <figure>
-                            <img alt="..." class="card-img-top img-with-credit" src="Images/medical.jpg">
+                            <img alt="..." class="card-img-top img-with-credit" src="Images/controverse.jpg" style="max-height: 13rem; width: auto">
                             <figcaption class="credits">
-                                <a href="https://www.freepik.com/free-vector/doctors-concept-illustration_7191136.htm#query=hospital&position=4&from_view=author&uuid=4f46042e-004a-4030-a513-fc9638327d2e">Image
-                                    by storyset</a> on Freepik
+                                <a href="https://www.freepik.com/free-vector/competitive-intelligence-concept-illustration_18953934.htm#query=controverse&position=4&from_view=author&uuid=b4e24fa9-f27d-49f7-8f1e-295264c3a426">Image by storyset</a> on Freepik
                             </figcaption>
                         </figure>
                         <div class="card-body">
@@ -147,14 +145,13 @@
                 <div class="col-md-4">
                     <div class="card bg-dark text-white" style="height: 25rem">
                         <figure>
-                            <img alt="..." class="card-img-top img-with-credit" src="Images/medical.jpg">
+                            <img alt="..." class="card-img-top img-with-credit" src="Images/interview.jpg" style="max-height: 13rem; width: auto">
                             <figcaption class="credits">
-                                <a href="https://www.freepik.com/free-vector/doctors-concept-illustration_7191136.htm#query=hospital&position=4&from_view=author&uuid=4f46042e-004a-4030-a513-fc9638327d2e">Image
-                                    by storyset</a> on Freepik
+                                <a href="https://www.freepik.com/free-vector/interview-concept-illustration_7171449.htm#query=interview&position=0&from_view=author&uuid=cefba46b-c259-48de-b4f3-1a8eaa9ed19b">Image by storyset</a> on Freepik
                             </figcaption>
                         </figure>
                         <div class="card-body">
-                            <h5 class="card-title display-5">Enquête de terrain</h5>
+                            <h5 class="card-title display-5" style="font-size: 2.5rem">Enquête de terrain</h5>
                             <a class="btn btn-secondary" href="enqueteterrain.html">Découvrir</a>
                         </div>
                     </div>
@@ -166,10 +163,9 @@
                 <div class="col-md-4">
                     <div class="card bg-dark text-white" style="height: 25rem">
                         <figure>
-                            <img alt="..." class="card-img-top img-with-credit" src="Images/medical.jpg">
+                            <img alt="..." class="card-img-top img-with-credit" src="Images/podcast.jpg" style="max-height: 13rem; width: auto">
                             <figcaption class="credits">
-                                <a href="https://www.freepik.com/free-vector/doctors-concept-illustration_7191136.htm#query=hospital&position=4&from_view=author&uuid=4f46042e-004a-4030-a513-fc9638327d2e">Image
-                                    by storyset</a> on Freepik
+                                <a href="https://www.freepik.com/free-vector/voice-chat-concept-illustration_20173782.htm#query=podcast&position=1&from_view=author&uuid=b584e3ab-04ed-47dc-9c2d-94c28c7e2c38">Image by storyset</a> on Freepik
                             </figcaption>
                         </figure>
                         <div class="card-body">
@@ -181,10 +177,9 @@
                 <div class="col-md-4">
                     <div class="card bg-dark text-white" style="height: 25rem">
                         <figure>
-                            <img alt="..." class="card-img-top img-with-credit" src="Images/medical.jpg">
+                            <img alt="..." class="card-img-top img-with-credit" src="Images/carto.jpg" style="max-height: 13rem; width: auto">
                             <figcaption class="credits">
-                                <a href="https://www.freepik.com/free-vector/doctors-concept-illustration_7191136.htm#query=hospital&position=4&from_view=author&uuid=4f46042e-004a-4030-a513-fc9638327d2e">Image
-                                    by storyset</a> on Freepik
+                                Image by <a href="https://www.freepik.com/free-vector/multicolor-mindmap-template_1355948.htm#query=mindmap&position=13&from_view=search&track=sph&uuid=accb8314-abf3-476a-a8cc-a12588afb70a">Freepik</a>
                             </figcaption>
                         </figure>
                         <div class="card-body">
@@ -196,10 +191,9 @@
                 <div class="col-md-4">
                     <div class="card bg-dark text-white" style="height: 25rem">
                         <figure>
-                            <img alt="..." class="card-img-top img-with-credit" src="Images/medical.jpg">
+                            <img alt="..." class="card-img-top img-with-credit" src="Images/biblio.png" style="max-height: 13rem; width: auto">
                             <figcaption class="credits">
-                                <a href="https://www.freepik.com/free-vector/doctors-concept-illustration_7191136.htm#query=hospital&position=4&from_view=author&uuid=4f46042e-004a-4030-a513-fc9638327d2e">Image
-                                    by storyset</a> on Freepik
+                                <a href="https://www.freepik.com/free-vector/reading-glasses-concept-illustration_22896097.htm#query=bibliographie&position=1&from_view=author&uuid=c606bbf5-a3c5-4c13-adf8-38ebe8afb072">Image by storyset</a> on Freepik
                             </figcaption>
                         </figure>
                         <div class="card-body">
