tuto comment utiliser la carto

--- a/cartographie.html
+++ b/cartographie.html
@@ -51,10 +51,14 @@
     <div class="card-body">
         <div class="px-3">
             <h1 class="display-5">Cartographie</h1>
+            <p>
+                Pour avoir plus d'explications, ouvrez le panneau latéral en cliquant sur les 3 points à gauche.
+                Malheureusement il n'est pas possible de zoomer avec la souris, il faut utiliser les boutons + - en haut à droite. Il est possible de changer la taille de police dans settings -> -> customize defaults -> font size.
+            </p>
         </div>
         <br>
         <div style="text-align: center">
-            <iframe class="custom-audio" src="https://embed.kumu.io/0dd9b6f93bdcbf810e11bda9503d207d" width="80%" style="aspect-ratio: 16/9" allowfullscreen frameborder="0"></iframe>
+            <iframe src="https://embed.kumu.io/65ae179e55b2c2254a8a92516d22bf14" width="80%" style="aspect-ratio: 16/9" allowfullscreen frameborder="0"></iframe>
         </div>
     </div>
 </div>
